--- a/Docs/Meza-FidalgoOzogPepper_ENV872_Project_Draft.Rmd
+++ b/Docs/Meza-FidalgoOzogPepper_ENV872_Project_Draft.Rmd
@@ -902,6 +902,9 @@ summary(Turtle_ts_monthly_trend)
 * Major findings are summarized
 * Conclusions relate back to the original research context 
 
+Pinniped Summary:
+
+While there were hints of a possible increasing trend in yearly pinniped strandings, a time series analysis found this to not be the case.  Additionally, 85.7 percent of the years were statistically significant for pinniped strandings.  There was seasonality in pinniped strandings, along with all but one of the months being statistically significant, which could be attributed to pupping seasons.  62.5 percent of pinniped strandings happened within 40km of the "mean stranding point."  By knowing where and when pinnipeds are most likely to strand, the environmental factors of those places and times can be studied in order to determine the conditions that cause strandings.  This knowledge could aid in stranding prevention and/or mitigation measures.  Further study could also be conducted at the species level to determine what if any differences occur.
 
 
 
