--- a/Code/jess_turtle_analysis.Rmd
+++ b/Code/jess_turtle_analysis.Rmd
@@ -63,7 +63,7 @@ Turtle_Strandings_Month <- Strandings_Totals_Month %>%
 
 # turtle strandings summed by date (for time series)
 Turtle_Stranding_by_date <- Turtle_Stranding_Data %>%
-                    group_by(Date) %>%
+                    group_by(Month, Year) %>%
                     summarise(Total = n())
 ```
 
@@ -87,6 +87,14 @@ ggplot(Turtle_Stranding_Data) +
   scale_fill_discrete(name = "Sea Turtle Species", labels = c("Green (Chelonia mydas)", "Kemp's Ridley (Lepidochelys kempii)", "Leatherback (Dermochelys coriacea)", "Loggerhead (Caretta caretta)", "Unidentified Turtle")) +
   scale_x_discrete(name = "Month",
                    limits = c("Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"))
+
+#Plot of annual turtle strandings with trend line
+ggplot(Strandings_Totals_Year, aes(x = Year, y = Turtles_Total)) +
+  geom_line(color = "red") +
+  ylab("Turtle Strandings") +
+  geom_smooth(method = lm) +
+  labs(title = "Turtle Strandings Per Year")
+
 ```
 
 > Exploratory analysis of the sea turtle stranding data set by year shows higher amounts of strandings in the early 1990s and late 2000s, with the highest amount in 1995. The most prominent species throughout our study period appear to be leatherback sea turtles, followed by loggerhead sea turtles. Through monthly data exploration, strandings peak from July to September and occur less frequently the remainder of the year. 
@@ -219,36 +227,41 @@ summary(Turtle_Model_Year)
 Turtle_Model_Month <- glm(data = Turtle_Strandings_Month, Turtles_Total ~ factor(Month), family = poisson)
 summary(Turtle_Model_Month)
 ```
-> We reject the null hypothesis that individual year has no effect on sea turtle strandings. The sea turtle strandings in 9 of the 21 years are not significantly different (p-values: 0.147 - 0.706). 1995 was the most significantly different (p-value: 0.000236). 1991 (p-value: 0.0056), 1993 (p-value: 0.0078), 2008 (p-value: 0.0022), 2010 (p-value: 0.0016), and 2011 (p-value: 0.003) were the next most statitistically different years. The null deviance of this model is 7.4606e+01, which indicates ??? The residual deviance of this model is -4.8850e-15, which indicates ??? 
+> We reject the null hypothesis that individual year has no effect on sea turtle strandings. The sea turtle strandings in 9 of the 21 years are not significantly different (p-values: 0.147 - 0.706). 1995 was the most significantly different (p-value: 0.000236). 1991 (p-value: 0.0056), 1993 (p-value: 0.0078), 2008 (p-value: 0.0022), 2010 (p-value: 0.0016), and 2011 (p-value: 0.003) were the next most statitistically different years. The null deviance of this model is 7.4606e+01 and the residual deviance of this model is -4.8850e-15.
 
-> We reject the null hypothesis that month has no effect on sea turtle strandings. Of the 12 months, 5 of months were significantly different. May (p-value: 0.000269), June (p-value: 3.98e-06), July (p-value: 1.91e-05), August (p-value: 0.004106), and September (p-value: 0.049935) were significantly different. This indicates that sea turtle strandings are concentrated to the summer months in our study area. The null deviance of this model is 4.9235e+02, which indicates ??? The residual deviance of this model is 3.0332e-10, which indicates ???
+> We reject the null hypothesis that month has no effect on sea turtle strandings. Of the 12 months, 5 of months were significantly different. May (p-value: 0.000269), June (p-value: 3.98e-06), July (p-value: 1.91e-05), August (p-value: 0.004106), and September (p-value: 0.049935) were significantly different. This indicates that sea turtle strandings are concentrated to the summer months in our study area. The null deviance of this model is 4.9235e+02 and the residual deviance of this model is 3.0332e-10.
 
 
 ## Turtle Stranding: Time Series
 
-Null hypothesis:
-Alternative hypothesis:
+>Null Hypothesis: The yearly and/or monthly/seasonal turtle stranding data is stationary.
+>Alternative Hypothesis: The yearly and/or monthly/seasonal turtle stranding data is not stationary
 
-```{r turtle time series}
-# time series by year
+```{r turtle yearly time series}
 Turtle_ts_yearly <- ts(Turtle_Stranding_by_date, start = c(1990,1), frequency = 1)
 
-# time series by month
-f_month_turtle <- month(first(Turtle_Stranding_by_date$Date))
-f_year_turtle <- year(first(Turtle_Stranding_by_date$Date))
+Turtle_ts_yearly_trend <- MannKendall(Turtle_ts_yearly)
+
+summary(Turtle_ts_yearly_trend)
+```
+> We reject the null hypothesis that yearly turtle strandings are stationary with a p-value = 0.048.
+
+``` {r turtle monthly time series}
+f_month_turtle <- month(first(Turtle_Stranding_by_date$Month))
+
 Turtle_ts_monthly <- ts(Turtle_Stranding_by_date$Total, 
-                  start = c(f_year_turtle, f_month_turtle), 
+                  start = c(1990, f_month_turtle), 
                   frequency = 12)
+
 # monthly decomposition 
 Turtle_ts_monthly_decomp <- stl(Turtle_ts_monthly, s.window = "periodic")
 plot(Turtle_ts_monthly_decomp)
 
-# Trends
-Turtle_ts_yearly_trend <- Kendall::SeasonalMannKendall(Turtle_ts_yearly)
-summary(Turtle_ts_yearly_trend)
-
 Turtle_ts_monthly_trend <- Kendall::SeasonalMannKendall(Turtle_ts_monthly)
 summary(Turtle_ts_monthly_trend)
 ```
+> We fail to reject the null hypothesis that monthly turtle strandings are stationary with a p-value = 0.107.
 
-```
+
+Turtle Findings Summary:
+
