--- a/Code/jess_turtle_analysis.Rmd
+++ b/Code/jess_turtle_analysis.Rmd
@@ -265,3 +265,4 @@ summary(Turtle_ts_monthly_trend)
 
 Turtle Findings Summary:
 
+80% of sea turtles strandings all occurred within 40km of the mean stranding location. This can indicate that this area could be a hot spot for sea turtle strandings, whether it be due to high abundance of sea turtles in the area or due to oceanic currents. 47.6% of years were statistically significant for sea turtle strandings. 41.7% of months were statistically significant, which are the May - September. This monthly breakdown corresponds with the timing of the sea turtle nesting season and when there is likley to be a higher abundance of them in the area. However, time series analysis indicated that there was a slight significance in year and there was not a significant seasonal component for sea turtle strandings. 
